opam-version: "2.0"
maintainer: "Leandro Ostera <leandro@ostera.io>"
authors: [ "Leandro Ostera <leandro@ostera.io>" ]
license: "BSD-3-clause"
homepage: "https://github.com/ostera/grpc"
bug-reports: "https://github.com/ostera/grpc/issues"
dev-repo: "git+https://github.com/ostera/grpc.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "alcotest" {with-test}
  "bigstringaf" {>= "0.5.0"}
  "angstrom" {>= "0.11.2"}
  "faraday" {>= "0.5.0"}
  "result"
  "psq"
  "hpack"
  "httpaf"
]
synopsis:
  "A high-performance, memory-efficient, and scalable gRPC library for for OCaml"
description: """
http/af implements the HTTP/2 specification with respect to parsing,
serialization, and connection pipelining as a state machine that is agnostic to
the underlying IO mechanism, and is therefore portable across many platform.
It uses the Angstrom and Faraday libraries to implement the parsing and
serialization layers of the HTTP standard, hence the name."""
